// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/anchor/demo/basic.tsx extend context correctly 1`] = `
<div>
  <div
    class=""
  >
    <div
      class="ant-anchor-wrapper"
      style="max-height:100vh"
    >
      <div
        class="ant-anchor"
      >
        <div
          class="ant-anchor-ink"
        >
          <span
            class="ant-anchor-ink-ball"
          />
        </div>
        <div
          class="ant-anchor-link"
        >
          <a
            class="ant-anchor-link-title"
            href="#components-anchor-demo-basic"
            title="Basic demo"
          >
            Basic demo
          </a>
        </div>
        <div
          class="ant-anchor-link"
        >
          <a
            class="ant-anchor-link-title"
            href="#components-anchor-demo-static"
            title="Static demo"
          >
            Static demo
          </a>
        </div>
        <div
          class="ant-anchor-link"
        >
          <a
            class="ant-anchor-link-title"
            href="#api"
            title="API"
          >
            API
          </a>
          <div
            class="ant-anchor-link"
          >
            <a
              class="ant-anchor-link-title"
              href="#anchor-props"
              title="Anchor Props"
            >
              Anchor Props
            </a>
          </div>
          <div
            class="ant-anchor-link"
          >
            <a
              class="ant-anchor-link-title"
              href="#link-props"
              title="Link Props"
            >
              Link Props
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/anchor/demo/customizeHighlight.tsx extend context correctly 1`] = `
<div
  class="ant-anchor-wrapper"
  style="max-height:100vh"
>
  <div
    class="ant-anchor ant-anchor-fixed"
  >
    <div
      class="ant-anchor-ink"
    >
      <span
        class="ant-anchor-ink-ball"
      />
    </div>
    <div
      class="ant-anchor-link"
    >
      <a
        class="ant-anchor-link-title"
        href="#components-anchor-demo-basic"
        title="Basic demo"
      >
        Basic demo
      </a>
    </div>
    <div
      class="ant-anchor-link"
    >
      <a
        class="ant-anchor-link-title"
        href="#components-anchor-demo-static"
        title="Static demo"
      >
        Static demo
      </a>
    </div>
    <div
      class="ant-anchor-link"
    >
      <a
        class="ant-anchor-link-title"
        href="#api"
        title="API"
      >
        API
      </a>
      <div
        class="ant-anchor-link"
      >
        <a
          class="ant-anchor-link-title"
          href="#anchor-props"
          title="Anchor Props"
        >
          Anchor Props
        </a>
      </div>
      <div
        class="ant-anchor-link"
      >
        <a
          class="ant-anchor-link-title"
          href="#link-props"
          title="Link Props"
        >
          Link Props
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/anchor/demo/onChange.tsx extend context correctly 1`] = `
<div
  class="ant-anchor-wrapper"
  style="max-height:100vh"
>
  <div
    class="ant-anchor ant-anchor-fixed"
  >
    <div
      class="ant-anchor-ink"
    >
      <span
        class="ant-anchor-ink-ball"
      />
    </div>
    <div
      class="ant-anchor-link"
    >
      <a
        class="ant-anchor-link-title"
        href="#components-anchor-demo-basic"
        title="Basic demo"
      >
        Basic demo
      </a>
    </div>
    <div
      class="ant-anchor-link"
    >
      <a
        class="ant-anchor-link-title"
        href="#components-anchor-demo-static"
        title="Static demo"
      >
        Static demo
      </a>
    </div>
    <div
      class="ant-anchor-link"
    >
      <a
        class="ant-anchor-link-title"
        href="#api"
        title="API"
      >
        API
      </a>
      <div
        class="ant-anchor-link"
      >
        <a
          class="ant-anchor-link-title"
          href="#anchor-props"
          title="Anchor Props"
        >
          Anchor Props
        </a>
      </div>
      <div
        class="ant-anchor-link"
      >
        <a
          class="ant-anchor-link-title"
          href="#link-props"
          title="Link Props"
        >
          Link Props
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/anchor/demo/onClick.tsx extend context correctly 1`] = `
<div
  class="ant-anchor-wrapper"
  style="max-height:100vh"
>
  <div
    class="ant-anchor ant-anchor-fixed"
  >
    <div
      class="ant-anchor-ink"
    >
      <span
        class="ant-anchor-ink-ball"
      />
    </div>
    <div
      class="ant-anchor-link"
    >
      <a
        class="ant-anchor-link-title"
        href="#components-anchor-demo-basic"
        title="Basic demo"
      >
        Basic demo
      </a>
    </div>
    <div
      class="ant-anchor-link"
    >
      <a
        class="ant-anchor-link-title"
        href="#components-anchor-demo-static"
        title="Static demo"
      >
        Static demo
      </a>
    </div>
    <div
      class="ant-anchor-link"
    >
      <a
        class="ant-anchor-link-title"
        href="#api"
        title="API"
      >
        API
      </a>
      <div
        class="ant-anchor-link"
      >
        <a
          class="ant-anchor-link-title"
          href="#anchor-props"
          title="Anchor Props"
        >
          Anchor Props
        </a>
      </div>
      <div
        class="ant-anchor-link"
      >
        <a
          class="ant-anchor-link-title"
          href="#link-props"
          title="Link Props"
        >
          Link Props
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/anchor/demo/static.tsx extend context correctly 1`] = `
<div
  class="ant-anchor-wrapper"
  style="max-height:100vh"
>
  <div
    class="ant-anchor ant-anchor-fixed"
  >
    <div
      class="ant-anchor-ink"
    >
      <span
        class="ant-anchor-ink-ball"
      />
    </div>
    <div
      class="ant-anchor-link"
    >
      <a
        class="ant-anchor-link-title"
        href="#components-anchor-demo-basic"
        title="Basic demo"
      >
        Basic demo
      </a>
    </div>
    <div
      class="ant-anchor-link"
    >
      <a
        class="ant-anchor-link-title"
        href="#components-anchor-demo-static"
        title="Static demo"
      >
        Static demo
      </a>
    </div>
    <div
      class="ant-anchor-link"
    >
      <a
        class="ant-anchor-link-title"
        href="#api"
        title="API"
      >
        API
      </a>
      <div
        class="ant-anchor-link"
      >
        <a
          class="ant-anchor-link-title"
          href="#anchor-props"
          title="Anchor Props"
        >
          Anchor Props
        </a>
      </div>
      <div
        class="ant-anchor-link"
      >
        <a
          class="ant-anchor-link-title"
          href="#link-props"
          title="Link Props"
        >
          Link Props
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/anchor/demo/targetOffset.tsx extend context correctly 1`] = `
<div>
  <div
    class=""
  >
    <div
      class="ant-anchor-wrapper"
      style="max-height:100vh"
    >
      <div
        class="ant-anchor"
      >
        <div
          class="ant-anchor-ink"
        >
          <span
            class="ant-anchor-ink-ball"
          />
        </div>
        <div
          class="ant-anchor-link"
        >
          <a
            class="ant-anchor-link-title"
            href="#components-anchor-demo-basic"
            title="Basic demo"
          >
            Basic demo
          </a>
        </div>
        <div
          class="ant-anchor-link"
        >
          <a
            class="ant-anchor-link-title"
            href="#components-anchor-demo-static"
            title="Static demo"
          >
            Static demo
          </a>
        </div>
        <div
          class="ant-anchor-link"
        >
          <a
            class="ant-anchor-link-title"
            href="#api"
            title="API"
          >
            API
          </a>
          <div
            class="ant-anchor-link"
          >
            <a
              class="ant-anchor-link-title"
              href="#anchor-props"
              title="Anchor Props"
            >
              Anchor Props
            </a>
          </div>
          <div
            class="ant-anchor-link"
          >
            <a
              class="ant-anchor-link-title"
              href="#link-props"
              title="Link Props"
            >
              Link Props
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
